修改默认站点

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <option value="aggregated">聚合搜索 (所有源)</option>
                     <option value="heimuer" selected>黑木耳影视 (heimuer)</option>
                     <option value="ffzy">非凡影视 (ffzy)</option>
-                    <option value="tyyszy">天涯资源 (tyyszy)</option>
+                    <option value="tyyszy" selected>天涯资源 (tyyszy)</option>
                     <option value="ckzy">CK资源 (ckzy)</option>
                     <option value="zy360">360资源 (zy360)</option>
                     <option value="wolong">卧龙资源 (wolong)</option>
